--- a/HulluKyla/Pages/HallintaPage.xaml
+++ b/HulluKyla/Pages/HallintaPage.xaml
@@ -3,38 +3,39 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
              x:Class="HulluKyla.Pages.HallintaPage"
-             Title="Hallinta">
+             Title="Hallintasivu">
 
     <Grid Padding="20"
           RowDefinitions="*,Auto"
           ColumnDefinitions="*,*">
 
         <!-- Napit -->
-        <VerticalStackLayout Grid.Row="0" Grid.ColumnSpan="2"
+            <VerticalStackLayout Grid.Row="0" Grid.ColumnSpan="2"
                              Spacing="20" Padding="5"
                              VerticalOptions="Center"
                              HorizontalOptions="Fill">
 
             <controls:ThreeDButton 
-                    Text="Asiakas sivut"
+                    Text="👤 Asiakkaat"
+                
                     Clicked="Navigoi_Clicked"
                     CommandParameter="AsiakasListaPage"
                     WidthRequest="190"/>
 
             <controls:ThreeDButton 
-                    Text="Alue sivut"
+                    Text="🌍 Alueet"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="AlueListaPage"
                     WidthRequest="190"/>
 
             <controls:ThreeDButton 
-                    Text="Mökki sivut"
+                    Text="🏡 Mökit"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="MokkiListaPage"
                     WidthRequest="190"/>
 
             <controls:ThreeDButton 
-                    Text="Palvelu sivut"
+                    Text="🛎️ Palvelut"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="PalveluListaPage"
                     WidthRequest="190"/>
@@ -44,7 +45,7 @@
         <!-- Etusivu nappi - Standardi vasenkulma? -->
         <controls:ThreeDButton 
                 Grid.Row="1" Grid.Column="0"
-                Text="Etusivu"
+                Text="🏠 Etusivu"
                 Clicked="Navigoi_Clicked"
                 CommandParameter="Etusivu"
                 HorizontalOptions="Start"
@@ -53,7 +54,7 @@
 
         <!-- Admin-nappi -->
         <controls:ThreeDButton Grid.Row="1" Grid.Column="1"
-                           Text="Admin"
+                           Text="🔒 Admin"
                            Clicked="Admin_Clicked"
                            HorizontalOptions="End"
                            VerticalOptions="End"
@@ -99,6 +100,5 @@
                         HorizontalOptions="Center"/>
             </VerticalStackLayout>
         </Frame>
-
     </Grid>
 </ContentPage>
